修改了团队介绍页面，布局有所调整，下一步应当把联系我们页面进行修改，使得符合整体的风格（利用semantic-ui）

--- a/demo/templates/about.html
+++ b/demo/templates/about.html
@@ -5,86 +5,80 @@
 {% block head %}
 {% endblock %}
 {% block MainContainer %}
-	<!-- Start container -->
-  <div id="container">
-  	<!-- Side view contains the logo and header section -->
-    <div class="sideview">
-  		<div class="logo">
-  			<a href="/"><img src="static/img/layout/apachelogo.jpg" width="250" height="146" alt="Logo" /></a>
-  		</div><!-- end logo -->
-  		<!-- Start menu -->
-  		<div class="menu">
-  			<ul class="nav">
-  				<li><a href="/">主页<span class="desc">回到首页</span></a></li>
-  				<li class="dropdown"><a href="#">Apache配置<span class="desc">Layouts</span></a>
-  					<ul>
-  						<li><a href="/func/conf">配置管理</a></li>
-  						<li><a href="/func/effi">性能监控</a></li>
-  						<li><a href="/func/path">日志管理</a></li>
-              <li><a href="/func/module">模块管理</a></li>
-  					</ul>
-  				</li>
-  				<li><a href="/about">团队介绍<span class="desc">Meet the team</span></a></li>
-  				<li class="dropdown"><a href="/introduction">应用介绍<span class="desc">Clients and projects</span></a>
-  					<ul>
-  						<li><a href="/introduction/usecase">用途介绍</a></li>
-  						<li><a href="/introduction/function">功能介绍</a></li>
-  					</ul>
-  				</li>
-  				<!-- <li class="dropdown"><a href="blog.html">Blog<span class="desc">Catch up on some news</span></a>
-  					<ul>
-  						<li><a href="single-blog.html">Single Blog Page</a></li>
-  					</ul>
-  				</li> -->
-  				<li><a href="/contact" class="last">联系我们<span class="desc">Get in touch</span></a></li>
-  			</ul>
-  		</div><!-- end menu -->
-  	</div><!-- end sideview -->
-      <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >Website Template</a></div>
-<!-- Start Content -->
 	<div class="content about cf">
-
-
-		<div class="grid-2 what-we-do cf">
-			<h1>Our Skills</h1>
-			<ul class="skills">
-				<li><span class="ux">UX Design</span><em>8/10</em></li>
-				<li><span class="ux">Development</span><em>9/10</em></li>
-				<li><span class="ux">Wordpress</span><em>8/10</em></li>
-				<li><span class="ux">Jquery</span><em>7/10</em></li>
-				<li><span class="ux">Photoshop</span><em>8/10</em></li>
-				<li><span class="ux">Happiness</span><em>8/10</em></li>
-			</ul>
-		</div><!-- end grid-2 -->
-
-		<div class="grid-2 what-we-do last">
-			<h1>Focus Points</h1>
-			<img src="img/info-graph.png" width="325" height="230" alt="Info Graph" />
-		</div><!-- end grid-2 -->
-
 		<div class="grid-1 the-team">
-			<h1>Meet the team</h1>
-			<ul class="team">
-				<li><p>Lorem ipsumia dolor sit ametis and the consectetur adipisicing elit, sed dos then eiusmod and tempor incid idunt uno labories set dolore magnal an sofar then some more awesome. Thanks</p>
-					<p class="team-member">Liza Samson<br /><span>UX Design</span></p>
-					<img src="static/img/team-1.png" width="" height="" alt="Team member" /></li>
-
-				<li><p>Lorem ipsumia dolor sit ametis and the consectetur adipisicing elit, sed dos then eiusmod and tempor incid idunt uno labories set dolore magnal an sofar then some more awesome. Thanks</p>
-				<p class="team-member">Ryan Brock<br /><span>Developer</span></p>
-				<img src="static/img/team-2.png" width="" height="" alt="Team member" /></li>
-
-				<li><p>Lorem ipsumia dolor sit ametis and the consectetur adipisicing elit, sed dos then eiusmod and tempor incid idunt uno labories set dolore magnal an sofar then some more awesome. Thanks</p>
-				<p class="team-member">Rita Havoc<br /><span>Designer</span></p>
-				<img src="static/img/team-3.png" width="" height="" alt="Team member" /></li>
-
-        <li><p>Lorem ipsumia dolor sit ametis and the consectetur adipisicing elit, sed dos then eiusmod and tempor incid idunt uno labories set dolore magnal an sofar then some more awesome. Thanks</p>
-				<p class="team-member">Rita Havoc<br /><span>Designer</span></p>
-				<img src="static/img/team-3.png" width="" height="" alt="Team member" /></li>
-
-        <li class="last"><p>Lorem ipsumia dolor sit ametis and the consectetur adipisicing elit, sed dos then eiusmod and tempor incid idunt uno labories set dolore magnal an sofar then some more awesome. Thanks</p>
-				<p class="team-member">Rita Havoc<br /><span>Designer</span></p>
-				<img src="static/img/team-3.png" width="" height="" alt="Team member" /></li>
-			</ul>
+			<h1>弟归</h1>
+        <div class="ui labeled button" tabindex="0">
+        <div class="ui red button">
+        团队介绍
+        </div>
+        <a class="ui basic red left pointing label">
+        北京航空航天大学计算机学院软件工程实验课程团队，ApacheAssistant开发团队
+        </a>
+        </div>
+        <div class="ui divider"></div>
+        <div class="ui labeled button" tabindex="0">
+        <div class="ui red button">
+        项目经理
+        </div>
+        <a class="ui basic red left pointing label">
+        王嘉凯
+        </a>
+        </div>
+        <div class="ui divider"></div>
+        <div class="ui labeled button" tabindex="0">
+        <div class="ui red button">
+        后端开发工程师
+        </div>
+        <a class="ui basic red left pointing label">
+        姬索肇
+        </a>
+        <a class="ui basic red left pointing label">
+        韩慧敏
+        </a>
+        <a class="ui basic red left pointing label">
+        王嘉凯
+        </a>
+        </div>
+        <div class="ui divider"></div>
+        <div class="ui labeled button" tabindex="0">
+        <div class="ui red button">
+        前端开发工程师
+        </div>
+        <a class="ui basic red left pointing label">
+        王嘉凯
+        </a>
+        <a class="ui basic red left pointing label">
+        王宁
+        </a>
+        <a class="ui basic red left pointing label">
+        叶俊辰
+        </a>
+        </div>
+        <div class="ui divider"></div>
+        <div class="ui labeled button" tabindex="0">
+        <div class="ui red button">
+        测试工程师
+        </div>
+        <a class="ui basic red left pointing label">
+        王宁
+        </a>
+        <a class="ui basic red left pointing label">
+        韩慧敏
+        </a>
+        </div>
+        <div class="ui divider"></div>
+        <div class="ui labeled button" tabindex="0">
+        <div class="ui red button">
+        运维工程师
+        </div>
+        <a class="ui basic red left pointing label">
+        姬索肇
+        </a>
+        <a class="ui basic red left pointing label">
+        叶俊辰
+        </a>
+        </div>
 		</div><!-- end grid-1 -->
 	</div><!-- end content -->
 {% endblock %}
