修改了关于跨域的错误理解😂

--- a/demo/templates/effi.html
+++ b/demo/templates/effi.html
@@ -59,17 +59,14 @@
 		</div><!-- end grid-1 -->
 
 		<script type="text/javascript">
-
+// http://127.0.0.1:5000/
 			var settings = {
 			  "async": true,
 			  "crossDomain": true,
-			  "url": "http://127.0.0.1:5000/api/save_config_path/",
+			  "url": "/api/save_config_path/",
 			  "method": "POST",
 			  "headers": {
 			    "Content-Type": "application/json",
-			    "Access-Control-Allow-Origin": "*",
-			    "Access-Control-Allow-Methods": "OPTIONS,HEAD,GET,POST",
-			    "Access-Control-Allow-Headers": "x-requested-with",
 			    "Accept": "*/*",
 			    "Cache-Control": "no-cache",
 			    "Postman-Token": "9ba09a17-a92d-44bb-8975-1f61e4cc17a1,17b28c91-d48d-49b1-9ade-1c6022f60aa9",
