简单完成了性能监控页面的js逻辑

--- a/demo/templates/effi.html
+++ b/demo/templates/effi.html
@@ -24,15 +24,15 @@
 				<h2>查看Apache状态</h2>
 				<div class="ui segment">
 					<a class="ui basic right label">当前Apache服务器的状态为：</a>
-					<button class="positive ui button">Running</button>
+					<button class="positive ui button" id="stateButton">Running</button>
 				</div>
 				</li>
 
 				<li class="development photography">
 				<h2>改变Apache状态</h2>
 				<div class="ui segment">
-					<button class="positive ui button">运行/停止</button>
-					<button class="positive ui button">重启</button>
+					<button class="positive ui button" id="changeButton">运行/停止</button>
+					<button class="positive ui button" id="restartButton">重启</button>
 				</div>
 				</li>
 
