--- a/demo/templates/effi.html
+++ b/demo/templates/effi.html
@@ -124,7 +124,11 @@
 								    data: dataRam,
 								    options: {}
 								});
-            }
+            },
+						error:function(data){
+							alert(data["error"]);
+						}
+
         })
 
 		</script>
